--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>WebStudio</title>
   </head>
 
   <body>
     <header>
-      <a href="/">WebStudio</a>
       <nav>
+        <a href="/">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -21,6 +21,78 @@
       <a href="mailto:info@example.com">info@example.com</a>
       <a href="tel:+380991111111">+38 099 111 11 11</a>
     </header>
+
+    <main>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <a href="">
+          <img src="./images/service_1.jpg" alt="первая услуга" width="370" />
+        </a>
+        <a href="">
+          <img src="./images/service_2.jpg" alt="вторая услуга" width="370" />
+        </a>
+        <a href="">
+          <img src="./images/service_3.jpg" alt="третья услуга" width="370" />
+        </a>
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/person_1.jpg" alt=" фото Игорь Демьяненко" width="270" />
+            <span>Игорь Демьяненко</span>
+            <span lang="en">Product Designer</span>
+          </li>
+          <li>
+            <img src="./images/person_2.jpg" alt=" фото Ольга Репина" width="270" />
+            <span>Ольга Репина</span>
+            <span lang="en">Frontend Developer</span>
+          </li>
+          <li>
+            <img src="./images/person_3.jpg" alt=" фото Николай Тарасов" width="270" />
+            <span>Николай Тарасов</span>
+            <span lang="en">Marketing</span>
+          </li>
+          <li>
+            <img src="./images/person_4.jpg" alt=" фото Михаил Ермаков" width="270" />
+            <span>Михаил Ермаков</span>
+            <span lang="en">UI Designer</span>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
       <a href="/">WebStudio</a>
