--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     </header>
 
     <main>
+      <!-- first section -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
 
+      <!-- features -->
       <section>
         <h2>Особенности</h2>
         <ul>
@@ -54,6 +56,7 @@
         </ul>
       </section>
 
+      <!-- what we do -->
       <section>
         <h2>Чем мы занимаемся</h2>
         <a href="">
@@ -67,6 +70,7 @@
         </a>
       </section>
 
+      <!-- our team -->
       <section>
         <h2>Наша команда</h2>
         <ul>
