corrected section "what we do"
section "what we do" - added missed <ul>

section "our team" - added parametr "height" for images

--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@
       <!-- what we do -->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <a href="">
-          <img src="./images/service_1.jpg" alt="первая услуга" width="370" />
-        </a>
-        <a href="">
-          <img src="./images/service_2.jpg" alt="вторая услуга" width="370" />
-        </a>
-        <a href="">
-          <img src="./images/service_3.jpg" alt="третья услуга" width="370" />
-        </a>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./images/service_1.jpg" alt="первая услуга" width="370" height="294" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/service_2.jpg" alt="вторая услуга" width="370" height="294" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/service_3.jpg" alt="третья услуга" width="370" height="294" />
+            </a>
+          </li>
+        </ul>
       </section>
 
       <!-- our team -->
@@ -75,22 +83,27 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/person_1.jpg" alt=" фото Игорь Демьяненко" width="270" />
+            <img
+              src="./images/person_1.jpg"
+              alt=" фото Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
             <span>Игорь Демьяненко</span>
             <span lang="en">Product Designer</span>
           </li>
           <li>
-            <img src="./images/person_2.jpg" alt=" фото Ольга Репина" width="270" />
+            <img src="./images/person_2.jpg" alt=" фото Ольга Репина" width="270" height="260" />
             <span>Ольга Репина</span>
             <span lang="en">Frontend Developer</span>
           </li>
           <li>
-            <img src="./images/person_3.jpg" alt=" фото Николай Тарасов" width="270" />
+            <img src="./images/person_3.jpg" alt=" фото Николай Тарасов" width="270" height="260" />
             <span>Николай Тарасов</span>
             <span lang="en">Marketing</span>
           </li>
           <li>
-            <img src="./images/person_4.jpg" alt=" фото Михаил Ермаков" width="270" />
+            <img src="./images/person_4.jpg" alt=" фото Михаил Ермаков" width="270" height="260" />
             <span>Михаил Ермаков</span>
             <span lang="en">UI Designer</span>
           </li>
@@ -99,8 +112,8 @@
     </main>
 
     <footer>
-      <a href="/">WebStudio</a>
       <address>
+        <a href="/">WebStudio</a>
         <p><a href="mailto:info@example.com">info@example.com</a></p>
         <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
       </address>
