--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <!-- <link rel="stylesheet" href="style.css" > -->
     <title>WebStudio</title>
   </head>
 
@@ -112,8 +112,9 @@
     </main>
 
     <footer>
+      <a href="/">WebStudio</a>
       <address>
-        <a href="/">WebStudio</a>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p><a href="mailto:info@example.com">info@example.com</a></p>
         <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
       </address>
