--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -83,29 +85,32 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./images/person_1.jpg"
-              alt=" фото Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <span>Игорь Демьяненко</span>
-            <span lang="en">Product Designer</span>
+            <a href="">
+              <img src="./images/person_1.jpg" alt="фото Игорь Демьяненко" width="270" />
+            </a>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/person_2.jpg" alt=" фото Ольга Репина" width="270" height="260" />
-            <span>Ольга Репина</span>
-            <span lang="en">Frontend Developer</span>
+            <a href="">
+              <img src="./images/person_2.jpg" alt="фото Ольга Репина" width="270" />
+            </a>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/person_3.jpg" alt=" фото Николай Тарасов" width="270" height="260" />
-            <span>Николай Тарасов</span>
-            <span lang="en">Marketing</span>
+            <a href="">
+              <img src="./images/person_3.jpg" alt="фото Николай Тарасов" width="270" />
+            </a>
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/person_4.jpg" alt=" фото Михаил Ермаков" width="270" height="260" />
-            <span>Михаил Ермаков</span>
-            <span lang="en">UI Designer</span>
+            <a href="">
+              <img src="./images/person_4.jpg" alt="фото Михаил Ермаков" width="270" />
+            </a>
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
