--- a/index.html
+++ b/index.html
@@ -64,17 +64,27 @@
         <ul>
           <li>
             <a href="">
-              <img src="./images/service_1.jpg" alt="первая услуга" width="370" height="294" />
+              <img
+                src="./images/service_1.jpg"
+                alt="работа за компьютером"
+                width="370"
+                height="294"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/service_2.jpg" alt="вторая услуга" width="370" height="294" />
+              <img src="./images/service_2.jpg" alt="работа с телефоном" width="370" height="294" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/service_3.jpg" alt="третья услуга" width="370" height="294" />
+              <img
+                src="./images/service_3.jpg"
+                alt="планшет с палитрой цвета"
+                width="370"
+                height="294"
+              />
             </a>
           </li>
         </ul>
@@ -119,9 +129,11 @@
     <footer>
       <a href="/">WebStudio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="mailto:info@example.com">info@example.com</a></p>
-        <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+        <p>
+          г. Киев, пр-т Леси Украинки, 26 <br />
+          <a href="mailto:info@example.com">info@example.com</a><br />
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </p>
       </address>
     </footer>
   </body>
