--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -64,27 +64,17 @@
         <ul>
           <li>
             <a href="">
-              <img
-                src="./images/service_1.jpg"
-                alt="работа за компьютером"
-                width="370"
-                height="294"
-              />
+              <img src="./images/service_1.jpg" alt="работа за компьютером" width="370" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/service_2.jpg" alt="работа с телефоном" width="370" height="294" />
+              <img src="./images/service_2.jpg" alt="мобильный телефон в руке" width="370" />
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./images/service_3.jpg"
-                alt="планшет с палитрой цвета"
-                width="370"
-                height="294"
-              />
+              <img src="./images/service_3.jpg" alt="планшет с палитрой цвета" width="370" />
             </a>
           </li>
         </ul>
@@ -96,28 +86,28 @@
         <ul>
           <li>
             <a href="">
-              <img src="./images/person_1.jpg" alt="фото Игорь Демьяненко" width="270" />
+              <img src="./images/person_1.jpg" alt="фото Игоря Демьяненко" width="270" />
             </a>
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_2.jpg" alt="фото Ольга Репина" width="270" />
+              <img src="./images/person_2.jpg" alt="фото Ольги Репиной" width="270" />
             </a>
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_3.jpg" alt="фото Николай Тарасов" width="270" />
+              <img src="./images/person_3.jpg" alt="фото Николая Тарасова" width="270" />
             </a>
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_4.jpg" alt="фото Михаил Ермаков" width="270" />
+              <img src="./images/person_4.jpg" alt="фото Михаила Ермакова" width="270" />
             </a>
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
@@ -127,13 +117,13 @@
     </main>
 
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./">WebStudio</a>
       <address>
-        <p>
-          г. Киев, пр-т Леси Украинки, 26 <br />
-          <a href="mailto:info@example.com">info@example.com</a><br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </p>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
